--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.9.0",
+    "@clerk/remix": "^4.7.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.1.0",
-    "@prisma/client": "^6.0.1",
+    "@prisma/client": "^6.7.0",
     "@remix-run/node": "^2.15.1",
     "@remix-run/react": "^2.15.1",
     "@remix-run/serve": "^2.15.1",
@@ -24,9 +26,11 @@
     "cloudinary": "^2.6.1",
     "game-log": "file:",
     "isbot": "^4.1.0",
+    "next-auth": "^5.0.0-beta.27",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.56.3"
+    "react-hook-form": "^7.56.3",
+    "remix-auth": "^4.2.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.15.1",
@@ -42,7 +46,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.49",
-    "prisma": "^6.0.1",
+    "prisma": "^6.7.0",
     "tailwindcss": "^3.4.16",
     "tsx": "^4.19.2",
     "typescript": "^5.1.6",
