--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.0",
+    "@clerk/clerk-react": "^5.31.1",
     "@clerk/remix": "^4.7.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
